--- a/lowadi-http-api/.env
+++ b/lowadi-http-api/.env
@@ -1,17 +1,11 @@
 HTTP_SERVER_ADDR = "localhost:8001"
-FUNC_SERVER_ADDR = "localhost:8002"
+FUNC_SERVER_ADDR = "http://127.0.0.1:8002"
 
 DATABASE_URL = "root:root@tcp(127.0.0.1:3306)/lowadi?parseTime=true"
 SALT = "asidfujhas98edfikasjhdufsadf1121333xxx"
 
 
-LOGIN_LOWADY_ACC = "Dirikey"
-PASSWORD_LOWADY_ACC = "lavefer21"
 
-TEST_PROXY_IP = "169.197.83.75"
-TEST_PROXY_PORT = "11812"
-TEST_PROXY_USERNAME = "f741a"
-TEST_PROXY_PASSWORD = "7xgrnzkh"
 
 
 
